MJ 02/01/2005
- Fixed bug in WireScaleFreeBA: it ocasionally generated loop edges and in
  general did not follow the BA model.

AM 30/12/2004
- Modified Makefile to remove "distributions" from the list of
  packages that are inserted in the distribution.

AM 30/12/2004
- Modified aggregation to use to the new vector package. All the
  implementation now use double instead of float.

MJ 30/12/2004
- Refactoring of classes that have to do with vector-like operations
  on an array of values, where each element of the array is stored
  by an instance of a SingleValue protocol. A new package called
  peersim.vector was created and everything is moved there.
- New classes dealing with vectors (see above) are added such as
  observers and dynamics, into package peersim.vector.

MJ 27/12/2004
- Changed print in IncrementalFreq to print only those lines that have
  non-zero frequency. Thanks to Spyros Voulgaris for pointing out the
  problem.
- Some minor refactoring and docs enhancement.

GJ 19/12/2004
- Fixed a Scamp cast bug in order to compile on JDK 1.5 . 

MJ 16/12/2004
- Fixed docs bug in FastConfig, thanks to Spyros Voulgaris, and added
  hasLinkable.

GJ 15/12/2004
- Added ExtendedRandom class to support power-law distribution generation
  (thanks to Simon Patarin for this code).
- Updated CommonRandom class: now uses the an ExtendedRandom object.  

AM 25/11/2004
- Changed the implementation of the Event-driven simulator in order to
  support 64 bits for time. Part of these bits (by default: 8) are used
  to discriminate between events that occur at the same time.
- Added getCycle and getTime methods to CommonState. getCycle() is just
  new version of getT, which is now deprecated. getTime() returns the
  current time in event-based simulations, and the current cycle in
  cycle-based ones.
- Modified all the peersim observers and dynamics that uses time, that
  now use getTime instead of getCycle. In this way, they are compatible